Updated homepage layout

--- a/index.html
+++ b/index.html
@@ -872,8 +872,7 @@ document.addEventListener('DOMContentLoaded', function() {
                                         <span class="dgm-hero-subtitle tp_fade_anim" data-delay=".3"></span>
                                         <h4 class="dgm-hero-title tp_fade_anim" data-delay=".5">
                             Creativity   <img class="dgm-hero-title-mike d-none d-md-inline-block" src="assets/img/home-03/hero/mike.png" alt="">
-                                             That Drives Impact
-                                        </h4>
+                                             That Drives Impact                                        </h4>
                                         <div class="tp_fade_anim" data-delay=".7">
                                            
                                         </div>
